--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@tailwindcss/typography": "^0.4.0",
         "@types/highcharts": "^7.0.0",
         "core-js": "^3.6.5",
+        "dompurify": "^3.2.6",
         "highcharts": "^9.3.2",
         "highcharts-vue": "^1.4.3",
         "intersection-observer": "^0.12.2",
